kubernetes/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stack-io
  namespace: stack-io
  labels:
    app: stack-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stack-io
  template:
    metadata:
      labels:
        app: stack-io
    spec:
      serviceAccountName: stack-io
      terminationGracePeriodSeconds: 40
      restartPolicy: Always
      containers:
      - name: webserver
        imagePullPolicy: IfNotPresent
        image: stack-io:latest
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "1"
          limits:
            cpu: "500m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 10
          failureThreshold: 5
        volumeMounts:
        - name: logs
          mountPath: /var/logs/webserver
        - name: stack-io
          mountPath: /app/server.confi
          subPath: server.confi # Using subPath to mount a single file from a volume
        - name: hooks
          mountPath: /app/hooks
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh","-c", "/app/hooks/post-start-hook.sh"]
          preStop:
            exec:
              command: ["/bin/sh","-c", "/app/hooks/pre-stop-hook.sh"]
      volumes:
      - name: logs
        persistentVolumeClaim:
          claimName: stack-io-logs-pvc
      - name: stack-io
        secret:
          secretName: stack-io-db-secret
          items:
          - key: server.confi
            path: server.confi
      - name: hooks-configmap
        configMap:
          name: stack-io-hooks-configmap
      - name: scripts-configmap
        configMap:
          name: stack-io-scripts-configmap
      - name: hooks
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: stack-io
  namespace: stack-io
  labels:
    app: stack-io
spec:
  type: ClusterIP
  selector:
    app: stack-io
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
---
apiVersion: v1
kind: Service
metadata:
  name: stack-io-nodeport
  namespace: stack-io
  labels:
    app: stack-io
spec:
  type: NodePort
  selector:
    app: stack-io
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: stack-io-lb
  namespace: stack-io
  labels:
    app: stack-io
spec:
  type: LoadBalancer
  selector:
    app: stack-io
  ports:
    - name: http
      protocol: TCP
      port: 89
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: stack-io
  labels:
    app: stack-io
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: stack-io
spec:
  ingressClassName: nginx
  rules:
  - host: stack-io.local
    http:
      paths:
      - backend:
          service:
            name: stack-io
            port:
              name: http
        path: /(.*)
        pathType: ImplementationSpecific
---
# Deny all ingress and egress traffic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: stack-io
  name: stack-io-default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# Allow traffic from the same namespace from pods with the specified labels
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  namespace: stack-io
  name: stack-io-allow-traffic
spec:
  podSelector:
    matchLabels:
      app: stack-io
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: stack-io
    - podSelector:
        matchLabels:
          app: nginx
